<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealFitness</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addFifteen">Add 15 secs</string>
    <string name="continueWithWorkout">Continue</string>
    <string name="done">Done</string>
    <string name="edit">Edit done reps</string>
    <string name="workoutCompleted">Well done, you completed this workout!</string>
    <string name="secs">s</string>
    <string name="noActiveProgram">No active program</string>
    <string name="backToWorkoutList">Back to workouts</string>
    <string name="startNewProgram">Start a new program</string>
    <string name="programStartedLabel">Started on %1$s</string>
    <string name="programDoneLabel">Finished on %1$s</string>
    <string name="programNextWorkout">Next workout due in %1$s day%2$s.</string>
    <string name="programNextWorkoutTomorrow">Next workout due tomorrow.</string>
    <string name="programNextWorkoutToday">Next workout today.</string>
    <string name="programMissedWorkout">You missed a workout %1$s day%2$s ago.</string>
    <string name="programMissedWorkoutYesterday">You missed a workout yesterday.</string>
    <string name="programAbandonnedLabel">Aborted on %1$s</string>
    <string name="doTodaysWorkout">Do today\'s workout</string>
    <string name="doThisWorkout">Do this workout</string>
    <string name="resumeWorkout">Resume workout</string>
    <string name="hasWorkoutToday">Workout scheduled for today</string>
    <string name="toMuscles">Show muscles</string>
    <string name="showExercises">Show exercises</string>
    <string name="showMuscles">Show Muscles</string>
    <string name="showPrograms">Show Programs</string>
    <string name="addNewProgram">Start program</string>
    <string name="cancel">Cancel</string>
    <string name="programListTitle">Select a program</string>
    <string name="startApp">To real app</string>
    <string name="createDatabase">Create database</string>
    <string name="progressLabel">Name your workout program</string>
    <string name="workoutList">Workouts</string>
    <string name="availablePrograms">Available programs</string>
    <string name="yourPrograms">Your programs</string>
    
    <string name="upcommingWorkouts">Upcoming workouts</string>
    <string name="currentWorkoutLabel">Current workout</string>
    <string name="todaysWorkoutLabel">Today\'s workout</string>
    <string name="programNamePlaceholder">Program name placeholder</string>
    <string name="programProgressStartDate">Started on %1$s</string>
    <string name="programDescriptionPlaceholder">Program\'s description. A text spanning over several lines, with instructions, tips and tricks, and some motivational text.</string>
    <string name="currentWorkoutDescription">Workout\'s description, if any was given.</string>
    
    <string name="workoutStartToday">Workout started today.</string>
    <string name="workoutStartYesterday">Workout started yesterday.</string>
    <string name="workoutStartDate">Workout started %1$d days ago.</string>

    <string name="workoutDueTomorroDate">Workout is due tomorrow.</string>
    <string name="workoutDueFutureDate">Workout due in %1$d days.</string>
    <string name="workoutDueYesterdayDate">Workout was due yesterday.</string>
    <string name="workoutDuePastDate">Workout was due %1$d days ago.</string>
    <string name="workoutDueForToday">Today\'s workout.</string>
    
    <string name="skipCurrentWorkoutTitle">Skip current workout?</string>
	<string name="skipCurrentWorkoutMessage">Are you sure you want to skip current workout?</string>
    <string name="skipWorkoutsTitle">Skip workouts?</string>
	<string name="skipWorkoutsMessage">Are you sure you want to skip all those workouts?</string>
	<string name="skipWorkoutYes">Yes</string>
    <string name="skipWorkoutNo">No</string>
    
    <string name="workoutDueForTodayProgressList">You have a workout for today.</string>
    
    <string name="exerciseListLabel">Exercises: %1$s</string>
    <string name="workoutProgressLabel">%1$d/%2$d exercises done</string>
    <string name="upcomingWorkoutStartNext">Start today</string>
    <string name="upcomingWorkoutJump">Jump here</string>
    <string name="workoutNamePlaceholder">Workout name</string>
    <string name="workoutDay">Day %1$d</string>
    <string name="workoutDescriptionPalceholder">Workout description comes here, if any is available. Should be a multiline text box to support a lot and lot and lots of text.</string>
    <string name="currentWorkoutNamePlaceholder">Current workout\\\'s name</string>
    <string name="breakDurationPlaceholder">37</string>
    <string name="exerciseNamePlaceholder">Exercise Name</string>
    <string name="breakTitle">Rest for</string>
    <string name="repCountText">15</string>
    <string name="repLabelText">reps</string>
    <string name="breakUnit">secs</string>
    <string name="programWorkoutCount">%1$d workouts in %2$d days, a total of %3$.0f units.</string>
    <string name="totalUnits">A total of %1$d units</string>
    <string name="estimatedTimeWithHour">About %1$d hours %2$d mins</string>
    <string name="estimatedTimeWithMinutes">About %1$d mins</string>
    <string name="estimatedTimeWithMinutesAndSecs">About %1$dm %2$ds</string>
    <string name="repsForListingExercises">(%2$d %1$s)</string>
    <string name="kRepsForListingExercises">(%2$.1f %1$s)</string>
    <string name="workoutExerciseListInAvailableWorkoutList">Exercises: %1$s</string>
    <string name="andMore">, and more&#8230;</string>
    <string name="noExercises">no exercises</string>
    <string name="editRepsDialogTitle">How many did you do?</string>
    
    <string name="sortByName">Sort by name</string>
    <string name="sortByLength">Sort by length, shortest first</string>
    <string name="sortByLengthDesc">Sort by length, longest first</string>
    <string name="sortByUnit">Sort by total units</string>
    <string name="sortByDifficulty">Sort by difficulty</string>
    
    <string name="questionMark">Help</string>
    <string name="backToPrograms">Back to programs</string>
    
    <string name="flurryKey">FXTJ4F3Y4GJ24PHFV2TJ</string>
    <string name="flurryQuestionTitle">Help us</string>
    <string name="flurryQuestionMessage">To provide the best experience, we would like to understand how you use this app. Would you mind if we record you usage data? No personal information will be stored.</string>
    <string name="flurryQuestionPositive">Sure, I\'ll help</string>
    <string name="flurryQuestionNegative">Not now</string>

    <string name="deleteProgramProgressTitle">Delete program</string>
    <string name="deleteProgramProgressMessage">If you delete this program, your recorded progress for this program will be lost. Are you sure?</string>
    <string name="deleteProgramProgressDelete">Yes, delete it</string>
	
	<string name="deleteAllProgramProgressTitle">Delete user data</string>
    <string name="deleteAllProgramProgressMessage">All your progress data will be lost. Are you sure?</string>
    <string name="deleteAllProgramProgressDelete">Yes, delete it</string>
    
	<string name="deleteAllProgramProgressSecondTitle">Delete user data</string>
    <string name="deleteAllProgramProgressSecondMessage">Are you really, really, really, really sure? All your progress data will be lost.</string>
    <string name="deleteAllProgramProgressSecondDelete">Yes, delete it</string>
    <string name="deleteAllProgramProgressSecondCancel">No, it was a mistake</string>
    
    <string name="settings">Settings</string>
    <string name="flurrySettings">Enable anonymous logging</string>
    <string name="showDonePrograms">Should finished programs be displayed in the program list?</string>
    <string name="enableSounds">Enable sounds for countdown</string>
    <string name="enableNotifications">Enable notifications for due workouts</string>
    <string name="removeAllData">Delete progress data</string>
    
    <string name="soundsNotYetImplemented">Sounds not yet implemented.</string>
    <string name="notificationsNotYetImplemented">Notifications not yet implemented.</string>
    
    <string name="loadingDataTitle">Preparing database</string>
    <string name="loadingDataMessage">Populating database from assets, this might take several minutes. Be patient, this will happen only once.</string>
    <string name="databaseCreated">Database created</string>
</resources>
