<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/programNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programNamePlaceholder"
        style="@style/ActivityTitle"/>

    <TextView
        android:id="@+id/programProgressDetailsStartDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programProgressStartDate" />

    <TextView
        android:id="@+id/programDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programDescriptionPlaceholder" />

    <ProgressBar
        android:id="@+id/programProgressBarOnProgressDetails"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:progress="50"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
                <TextView
			        android:id="@+id/currentWorkoutLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/currentWorkoutLabel"
			        style="@style/SubTitle"/>
			
			    <TextView
			        android:id="@+id/currentWorkoutText"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/currentWorkoutNamePlaceholder" />
			
				<TextView
			        android:id="@+id/currentWorkoutTime"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/estimatedTimeWithHour" />
			    
			    <TextView
			        android:id="@+id/currentWorkoutUnits"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/totalUnits" />
			
				<TextView
			        android:id="@+id/currentWorkoutDescription"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/currentWorkoutDescription" />
			
			    <TextView
			        android:id="@+id/exerciseListLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/exerciseListLabel" />
			
				<TextView
			        android:id="@+id/workoutProgressLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/workoutProgressLabel" />
			    
			    <TextView
			        android:id="@+id/workoutStartDateLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/workoutStartDate" />
			            
		</LinearLayout>
	    <Button
	        android:id="@+id/doTodaysWorkoutOnProgressDetails"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/doTodaysWorkout"
	        android:layout_gravity="bottom"/>
	</LinearLayout>

	<TextView
	    android:id="@+id/upcommingWorkoutsLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/upcommingWorkouts"
	    style="@style/SubTitle"/>

	<ListView
	    android:id="@+id/upcommingWorkoutsList"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	</ListView>

	<Button
	    android:id="@+id/backToProgramList"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/backToPrograms" />

</LinearLayout>
