<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/ActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <CheckBox
        android:id="@+id/settingsFlurry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flurrySettings" />

    <CheckBox
        android:id="@+id/settingsShowDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showDonePrograms" />

    <CheckBox
        android:id="@+id/settingsEnableSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enableSounds" />

    <CheckBox
        android:id="@+id/settingsEnableNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enableNotifications" />

    <Button
        android:id="@+id/resetDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:text="@string/removeAllData" />

</LinearLayout>
