<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >    

    <TextView
        android:id="@+id/workoutNameInAvailableWorkoutList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/workoutNamePlaceholder"
        style="@style/ListItemTitle"/>
	
	<TextView
        android:id="@+id/workoutDescriptionInAvailableWorkoutList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/workoutDescriptionPalceholder" /> 
    
    <TextView
        android:id="@+id/workoutTotalRepsInAvailableWorkoutList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseListLabel" />
	
    <TextView
        android:id="@+id/workoutEstimatedTimeInAvailableWorkoutList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimatedTimeWithHour" />
    
    <TextView
        android:id="@+id/workoutUnitsInAvailableWorkoutList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalUnits" />    
</LinearLayout>
