<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
	    <TextView
	        android:layout_marginLeft="45dp"
	        android:id="@+id/exerciseLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/exerciseNamePlaceholder"
	        android:textSize="40sp"/>

	    <ImageView
	        android:id="@+id/exerciseTypeHelp"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="5dp"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:src="@drawable/question_mark"
	        android:contentDescription="@string/questionMark"
	        />

	</LinearLayout>
    <TextView
        android:id="@+id/reps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:text="@string/repCountText"
		android:layout_weight="1"
		android:textSize="120sp"/>

    <TextView
        android:id="@+id/repsLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/repLabelText"
        android:layout_weight="2"
		android:textSize="40sp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/exerciseDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>