<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"/>
    
    <TextView
        android:id="@+id/breakDuration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:layout_weight="1"
        android:text="@string/breakDurationPlaceholder"
        android:textSize="120sp" />
    
    <TextView
        android:id="@+id/breakUnit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/breakUnit"
        android:layout_weight="2"
		android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addFifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/addFifteen" />

        <Button
            android:id="@+id/continueWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continueWithWorkout" />
    </LinearLayout>
</LinearLayout>