<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/ActivityTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/yourPrograms" />

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/settings"
            android:contentDescription="@string/action_settings"/>

    </LinearLayout>

	<TextView
	    android:id="@+id/noActiveProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noActiveProgram"
        android:layout_gravity="center_horizontal"
        style="@style/ListItemTitle"/>
	
	<ListView
        android:id="@+id/programList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <Button
        android:id="@+id/startNewProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/startNewProgram" />

</LinearLayout>
