<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    >    

    <TextView
        android:id="@+id/programNameInAvailableProgramList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/programNamePlaceholder"
        style="@style/ListItemTitle"/>

    <TextView
        android:id="@+id/programDescriptionInAvailableProgramList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/programDescriptionPlaceholder" />

    <TextView
        android:id="@+id/programWorkoutsInAvailableProgramList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programWorkoutCount" />

</LinearLayout>
