<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/workoutNameInUpcomingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workoutNamePlaceholder"
        android:textAppearance="@android:style/TextAppearance.Medium" />
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


	    <TextView
	        android:id="@+id/workoutDetailsInUpcomingList"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/workoutDescriptionPalceholder" />
	    <Button
	        android:id="@+id/workoutSkipToThisInUpcomingList"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:layout_weight="0"
	        android:text="@string/upcomingWorkoutJump" />
	    
    </LinearLayout>
</LinearLayout>
