<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <hu.droidium.fitness_app.WorkoutProgressView
        android:id="@+id/workoutProgress"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:padding="5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/breakLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/breakDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content">
            <Button
                android:id="@+id/addFifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/addFifteen" />

            <Button
                android:id="@+id/continueWorkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continueWithWorkout" />

			</LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exerciseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/exerciseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content">
	            <Button
	                android:id="@+id/editExercise"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/edit" />
	
	            <Button
	                android:id="@+id/exerciseDone"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/done" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>